# tmc_realtime_control

tmc_control_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_control_msgs/action/: GripperApplyEffort.action
tmc_realtime_controllers/: CHANGELOG.rst  CMakeLists.txt  controllers_plugins.xml  package.xml
tmc_realtime_controllers/src/tmc_realtime_controllers/: digital_input_controller.cpp  digital_input_controller.hpp  digital_output_controller.cpp  digital_output_controller.hpp
tmc_realtime_controllers/test/: digital_input_controller_test.cpp  digital_output_controller_test.cpp
